--- a/static/css/spotify/artists.css
+++ b/static/css/spotify/artists.css
@@ -16,9 +16,7 @@
     display: block;
     margin: 0 auto;
     padding: 30px;
-    /* /* height: 100%; */
     width: 100%; 
-    /* border-radius: 50%; */
 }
 
 .artist .name {
@@ -28,4 +26,8 @@
 
 .parent {
     padding-bottom: 50px;
+}
+
+.name-logo-and-buttons {
+    padding: 0.5rem;
 }
