--- a/static/css/spotify/tracks.css
+++ b/static/css/spotify/tracks.css
@@ -24,6 +24,9 @@
 .play-pause:hover {
     cursor: pointer;
 }
+.name-and-logo {
+  padding: 10px 0;
+}
 
 .table-box {
   width: 100%;
@@ -32,12 +35,22 @@
   padding: 0 20px 20px;
 }
 
+.spotify-logo {
+  width: 35px;
+}
+
+.table-name-box {
+  display: flex;
+  align-items: center;
+}
 .table-name {
-  font-weight: 200px;
+  margin: 0;
+  padding-left: 10px;
   color: #edf2f4;
 }
 
 .time-select-buttons {
+  padding: 5px;
   color: #60778c;
 }
 
@@ -56,7 +69,6 @@
   width: 100%;
 }
 
-
 .rows:hover {
   background-color: #ffffff20;
 }
@@ -67,20 +79,33 @@
   float: left;
   position: relative;
 }
+.index {
+  position: relative;
+}
+
+.invisible {
+  opacity: 0;
+}
+
 .overlay {
   position: absolute;
   top: 0;
-  bottom: 0;
   left: 0;
-  right: 0;
   height: 100%;
   width: 100%;
   transition: 0.3s ease;
   background-color: #00000000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .cover {
-  height: 100%;
+  width: 50px;
+  height: 50px;
+}
+
+.cover img {
   width: 100%;
 }
 
@@ -88,26 +113,36 @@
 .fa-pause {
   opacity: 0;
   background: #00000000;
-  font-size: 15px;
+  font-size: 25px;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   text-align: center;
-  color: #dadada;
+  color: #ffffff;
 }
 
-.container:hover .overlay {
-  background-color: #00000080;
+
+.overlay h4 {
+  padding: 0;
+  color: #FFFFFF;
+  font-size: 20px;
+  margin: 0;
+}
+.rows:hover h4 {
+  opacity: 0;
 }
 
-.container:hover .fa-play,
+.rows:hover .fa-play,
 .fa-pause {
   opacity: 1;
 }
 
 @media only screen and (max-width: 992px) {
+  .name-logo-and-buttons {
+    padding: 0.5rem;
+  }
   .unseen {
     display: none;
   }
