--- a/templates/spotify/tracks.html
+++ b/templates/spotify/tracks.html
@@ -72,7 +72,7 @@
                     <div class="overlay">
                         <h4>{{loop.index}}</h4>
                         <span class="icon play-pause">
-                            <i class="fa fa-play"></i>
+                            <i class="fa fa-play small-play-button"></i>
                             <audio class="audio" src="{{track.preview}}"></audio>
                         </span>
                     </div>
