--- a/templates/index.html
+++ b/templates/index.html
@@ -38,6 +38,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item"><a class="nav-link" href="{{url_for('home')}}">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="{{url_for('spotify_liked')}}">Liked Tracks</a></li>
           <li class="nav-item"><a class="nav-link" href="{{url_for('spotify_recent')}}">Recent Tracks</a>
           </li>
