--- a/templates/home.html
+++ b/templates/home.html
@@ -19,9 +19,9 @@
         <img src="{{url_for('static', filename='assets/spotify_logo_white.png')}}" />
     </div>
     <div class="title">
-        <h3>
-            Sketyl Song of The Day
-        </h3>
+        <h1>
+            Song of The Day
+        </h1>
         <h3>
             <a href="{{track.url}}">{{track.name}}</a>
         </h3>
